--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
 
     <!-- Forked from Jenkins analysis-core-plugin 1.42 
     
-         Add dependency on jfreechart-plugin.
-         Work around incompatibility introduced by jfreechart-plugin.
+         Change groupId to org.eclipse.hudson.plugins.
+         Work around jfreechart-plugin incompatibility (code change).
     -->
     
     <parent>
@@ -15,16 +15,10 @@
       <relativePath>../analysis-pom/pom.xml</relativePath>
     </parent>
 
-    <!--parent>
-        <groupId>org.eclipse.hudson.plugins</groupId>
-        <artifactId>hudson-plugin-parent</artifactId>
-        <version>3.0.0-SNAPSHOT</version>
-    </parent-->
-
     <artifactId>analysis-core</artifactId>
     <packaging>hpi</packaging>
     <name>Static Analysis Utilities</name>
-    <version>3.0.0-SNAPSHOT</version>
+    <version>1.42-SNAPSHOT</version>
     <description>This plug-in provides utilities for the static code analysis plug-ins.</description>
 
     <url>http://wiki.hudson-ci.org/display/HUDSON/Static+Code+Analysis+Plug-ins</url>
@@ -60,54 +54,6 @@
             <artifactId>java2html</artifactId>
             <version>5.0</version>
         </dependency>
-        <!--dependency>
-            <groupId>org.hudsonci.plugins</groupId>
-            <artifactId>jfreechart-plugin</artifactId>
-            <version>1.3-SNAPSHOT</version>
-        </dependency>
-      <dependency>
-        <groupId>org.jenkins-ci.plugins</groupId>
-        <artifactId>token-macro</artifactId>
-        <version>1.1</version>
-        <optional>true</optional>
-      </dependency>
-        <dependency>
-            <groupId>org.hudsonci.plugins</groupId>
-            <artifactId>maven-plugin</artifactId>
-            <version>2.2.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jvnet.hudson.plugins</groupId>
-            <artifactId>dashboard-view</artifactId>
-            <version>1.8.1</version>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.8.1</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-all</artifactId>
-            <version>1.8.5</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.google.code.findbugs</groupId>
-            <artifactId>jsr305</artifactId>
-            <version>1.3.9</version>
-            <type>jar</type>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.google.code.findbugs</groupId>
-            <artifactId>annotations</artifactId>
-            <version>1.3.9</version>
-            <type>jar</type>
-            <scope>compile</scope>
-        </dependency-->
     </dependencies>
 
     <build>
@@ -123,19 +69,6 @@
             </plugin>
         </plugins>
     </build>
-
-  <!--repositories>
-    <repository>
-      <releases>
-        <enabled>true</enabled>
-      </releases>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-      <id>repo.jenkins-ci.org</id>
-      <url>http://repo.jenkins-ci.org/public/</url>
-    </repository>
-  </repositories-->
 
 </project>  
   
