--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <parent>
       <groupId>org.hudsonci.plugins</groupId>
       <artifactId>analysis-pom</artifactId>
-      <version>3.0.0-M2-1</version>
+      <version>3.0.0</version>
       <relativePath>../analysis-pom/pom.xml</relativePath>
     </parent>
 
