--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <!-- Forked from Jenkins analysis-core-plugin 1.42 
+    <!-- Forked from Jenkins analysis-core-plugin 1.42-SNAPSHOT 
     
          Change groupId to org.eclipse.hudson.plugins.
          Work around jfreechart-plugin incompatibility (code change).
