--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <parent>
       <groupId>org.hudsonci.plugins</groupId>
       <artifactId>analysis-pom</artifactId>
-      <version>3.0.0-SNAPSHOT</version>
+      <version>3.0.0-M3</version>
       <relativePath>../analysis-pom/pom.xml</relativePath>
     </parent>
 
@@ -62,7 +62,7 @@
         <dependency>
             <groupId>org.hudsonci.plugins</groupId>
             <artifactId>jfreechart-plugin</artifactId>
-            <version>1.4-SNAPSHOT</version>
+            <version>1.4</version>
       </dependency>
   </dependencies>
 
