--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   <artifactId>analysis-core</artifactId>
   <packaging>hpi</packaging>
   <name>Static Analysis Utilities</name>
-  <version>1.48-h-1-SNAPSHOT</version>
+  <version>1.48-h-1</version>
   <description>This plug-in provides utilities for the static code analysis plug-ins.</description>
   <url>http://wiki.hudson-ci.org/x/CwDgAQ</url>
   <dependencies>
