--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.hudsonci.plugins</groupId>
     <artifactId>analysis-pom</artifactId>
-    <version>1.42-h-1-SNAPSHOT</version>
+    <version>1.42-h-1</version>
     <relativePath/>
   </parent>
 
