--- a/pom.xml
+++ b/pom.xml
@@ -6,14 +6,14 @@
     <groupId>org.hudsonci.plugins</groupId>
     <artifactId>analysis-pom</artifactId>
     <version>1.42-h-1</version>
-    <relativePath/>
+    <relativePath />
   </parent>
 
   <groupId>org.hudsonci.plugins</groupId>
   <artifactId>analysis-core</artifactId>
   <packaging>hpi</packaging>
   <name>Static Analysis Utilities</name>
-  <version>1.49-h-1-SNAPSHOT</version>
+  <version>1.49-h-1</version>
   <description>This plug-in provides utilities for the static code analysis plug-ins.</description>
 
   <url>http://wiki.hudson-ci.org/x/CwDgAQ</url>
