--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.hudsonci.plugins</groupId>
     <artifactId>analysis-pom</artifactId>
-    <version>1.42-h-1</version>
+    <version>1.42-h-2-SNAPSHOT</version>
     <relativePath />
   </parent>
 
@@ -41,20 +41,6 @@
     <developerConnection>scm:git:git@github.com:hudson3-plugins/analysis-core.git</developerConnection>
     <url>https://github.com/hudson3-plugins/analysis-core</url>
   </scm>
-
-  <repositories>
-    <repository>
-      <id>repo.jenkins-ci.org</id>
-      <url>http://repo.jenkins-ci.org/public/</url>
-    </repository>
-  </repositories>
-
-  <pluginRepositories>
-    <pluginRepository>
-      <id>repo.jenkins-ci.org</id>
-      <url>http://repo.jenkins-ci.org/public/</url>
-    </pluginRepository>
-  </pluginRepositories>
 
   <build>
     <plugins>
